--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "Kirill Ivanov",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "ion-rangeslider": "^2.3.0"
+  },
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "cssmin": "^0.4.3",
