--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ion-rangeslider": "^2.3.0"
   },
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.26.7",
     "cssmin": "^0.4.3",
     "gulp": "^4.0.2",
