--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
+    "gulp-imagemin": "^6.2.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
+    "imagemin-jpeg-recompress": "^6.0.0",
     "jquery-form-styler": "^2.0.2",
     "magnific-popup": "^1.1.0",
     "mixitup": "^3.3.1",
